--- a/coffee_shop_louissa/models/models/sources.yml
+++ b/coffee_shop_louissa/models/models/sources.yml
@@ -6,14 +6,8 @@ sources:
     tables:
       - name: customers
         columns:
-          - name: id
+          - name: customer_id
             tests:
               - unique
               - not_null
  
-      - name: orders
-        columns:
-          - name: id
-            tests:
-              - unique
-              - not_null
