--- a/coffee_shop_louissa/models/models/sources.yml
+++ b/coffee_shop_louissa/models/models/sources.yml
@@ -1,13 +1,10 @@
 version: 2
  
 sources:
-  - name: coffee_shop
+  - name: dbt_louissa
     project: aec-students
     tables:
-      - name: customers
+      - name: source_customers
         columns:
           - name: customer_id
-            tests:
-              - unique
-              - not_null
- 
+
