changes in browser

--- a/coffee_shop_louissa/models/models/sources.yml
+++ b/coffee_shop_louissa/models/models/sources.yml
@@ -1,10 +1,9 @@
 version: 2
  
 sources:
-  - name: dbt_louissa
+  - name: source_raw
     project: aec-students
     tables:
-      - name: source_customers
+      - name: customers
         columns:
           - name: customer_id
-
