--- a/coffee_shop_louissa/dbt_project.yml
+++ b/coffee_shop_louissa/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'coffee_shop'
+name: 'coffee_shop_louissa'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
@@ -34,3 +34,6 @@ models:
   coffee_shop_louissa:
     # Config indicated by + and applies to all files under models/example/
       materialized: view
+
+data_tests:
+  +severity: warn
