--- a/coffee_shop_louissa/dbt_project.yml
+++ b/coffee_shop_louissa/dbt_project.yml
@@ -35,5 +35,10 @@ models:
     # Config indicated by + and applies to all files under models/example/
       materialized: view
 
+#  fivetran:
+#    github:
+#      +dataset: analytics-engineers-club.github
+
+
 data_tests:
   +severity: warn
