--- a/coffee_shop_louissa/dbt_project.yml
+++ b/coffee_shop_louissa/dbt_project.yml
@@ -38,6 +38,11 @@ models:
 #  fivetran:
 #    github:
 #      +dataset: analytics-engineers-club.github
+vars:
+  github_source:
+    github_database: analytics-engineers-club
+    github_schema: github 
+  github__using_repo_team: false # by default this is assumed to be true
 
 
 data_tests:
